@@ -2,7 +2,7 @@
  * #%L
  * This file is part of QuPath.
  * %%
- * Copyright (C) 2018 - 2020 QuPath developers, The University of Edinburgh
+ * Copyright (C) 2018 - 2025 QuPath developers, The University of Edinburgh
  * %%
  * QuPath is free software: you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as
@@ -24,16 +24,39 @@ package qupath.lib.gui.panes;
 import java.awt.image.BufferedImage;
 import java.io.File;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
-import java.util.Set;
-import java.util.function.Predicate;
 import java.util.stream.Collectors;
 
-import javafx.scene.control.*;
+import javafx.collections.SetChangeListener;
+import javafx.geometry.Insets;
+import javafx.geometry.Pos;
+import javafx.scene.Node;
+import javafx.scene.control.Button;
+import javafx.scene.control.ButtonType;
+import javafx.scene.control.CheckMenuItem;
+import javafx.scene.control.ContentDisplay;
+import javafx.scene.control.ContextMenu;
+import javafx.scene.control.Label;
+import javafx.scene.control.ListCell;
+import javafx.scene.control.ListView;
+import javafx.scene.control.Menu;
+import javafx.scene.control.MenuItem;
+import javafx.scene.control.OverrunStyle;
+import javafx.scene.control.SelectionMode;
+import javafx.scene.control.SeparatorMenuItem;
+import javafx.scene.control.ToggleButton;
+import javafx.scene.control.Tooltip;
+import javafx.scene.input.MouseEvent;
+import javafx.scene.layout.ColumnConstraints;
+import javafx.scene.layout.HBox;
+import javafx.scene.layout.StackPane;
+import javafx.scene.layout.VBox;
+import javafx.scene.paint.Color;
 import org.controlsfx.control.action.Action;
 import org.controlsfx.control.action.ActionUtils;
+import org.controlsfx.glyphfont.FontAwesome;
+import org.controlsfx.glyphfont.GlyphFontRegistry;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -42,8 +65,6 @@ import javafx.beans.binding.Bindings;
 import javafx.beans.binding.BooleanBinding;
 import javafx.beans.property.BooleanProperty;
 import javafx.beans.property.SimpleBooleanProperty;
-import javafx.beans.property.SimpleStringProperty;
-import javafx.beans.property.StringProperty;
 import javafx.collections.ObservableList;
 import javafx.geometry.Side;
 import javafx.scene.input.Clipboard;
@@ -57,6 +78,7 @@ import javafx.scene.layout.GridPane;
 import javafx.scene.layout.Pane;
 import javafx.scene.layout.Priority;
 import javafx.scene.shape.Rectangle;
+import qupath.fx.controls.PredicateTextField;
 import qupath.fx.dialogs.FileChoosers;
 import qupath.lib.gui.QuPathGUI;
 import qupath.lib.gui.commands.Commands;
@@ -64,13 +86,13 @@ import qupath.fx.dialogs.Dialogs;
 import qupath.lib.gui.prefs.PathPrefs;
 import qupath.lib.gui.tools.ColorToolsFX;
 import qupath.lib.gui.tools.GuiTools;
-import qupath.lib.gui.tools.MenuTools;
+import qupath.lib.gui.tools.IconFactory;
 import qupath.fx.utils.GridPaneUtils;
 import qupath.lib.gui.viewer.OverlayOptions;
-import qupath.lib.gui.viewer.QuPathViewer;
 import qupath.lib.images.servers.ImageServer;
 import qupath.lib.objects.PathObject;
 import qupath.lib.objects.classes.PathClass;
+import qupath.lib.objects.classes.PathClassTools;
 import qupath.lib.objects.hierarchy.PathObjectHierarchy;
 import qupath.lib.projects.Project;
 import qupath.lib.projects.ProjectIO;
@@ -87,46 +109,71 @@ class PathClassPane {
 	private static final KeyCombination copyCombo = new KeyCodeCombination(KeyCode.C, KeyCodeCombination.SHORTCUT_DOWN);
 	private static final KeyCombination pasteCombo = new KeyCodeCombination(KeyCode.V, KeyCodeCombination.SHORTCUT_DOWN);
 	
-	private QuPathGUI qupath;
+	private final QuPathGUI qupath;
 	
-	private ObservableList<PathClass> availablePathClasses;
+	private final ObservableList<PathClass> availablePathClasses;
 	
-	private Pane pane;
+	private final Pane pane;
 	private ListView<PathClass> listClasses;
-	
-	private StringProperty filterText = new SimpleStringProperty("");
-	
+
 	/**
 	 * If set, request that new annotations have their classification set automatically
 	 */
-	private BooleanProperty doAutoSetPathClass = new SimpleBooleanProperty(false);
+	private final BooleanProperty doAutoSetPathClass = new SimpleBooleanProperty(false);
 	
 	PathClassPane(QuPathGUI qupath) {
 		this.qupath = qupath;
 		this.availablePathClasses = qupath.getAvailablePathClasses();
-		pane = createClassPane();
+		var mainPane = createClassPane();
+		var titled = GuiTools.createLeftRightTitledPane("Class list", createTitleNode());
+		titled.setContent(mainPane);
+		mainPane.setPadding(Insets.EMPTY);
+
+		titled.setContentDisplay(ContentDisplay.RIGHT);
+		pane = new BorderPane(titled);
+
+		// Refresh when visibilities change
+		var options = qupath.getOverlayOptions();
+		options.hideExactClassesOnlyProperty().addListener((v, o, n) -> listClasses.refresh());
+		options.hiddenClassesProperty().addListener((SetChangeListener.Change<? extends PathClass> c) -> listClasses.refresh());
+	}
+
+
+
+	private Pane createTitleNode() {
+		int iconSize = 8;
+
+		Action addNewAction = new Action(e -> promptToAddClass());
+		addNewAction.setGraphic(IconFactory.createNode(FontAwesome.Glyph.PLUS, iconSize));
+		addNewAction.setLongText("Add a new class to the list");
+
+		Action removeSelected = new Action(e -> promptToRemoveSelectedClasses());
+		removeSelected.setGraphic(IconFactory.createNode(FontAwesome.Glyph.MINUS, iconSize));
+		removeSelected.disabledProperty().bind(Bindings.isEmpty(listClasses.getSelectionModel().getSelectedItems().filtered(p -> p != PathClass.NULL_CLASS)));
+		removeSelected.setLongText("Remove the selected classes from the list (this does not change or remove objects)");
+
+		Button btnAdd = ActionUtils.createButton(addNewAction);
+		Button btnRemove = ActionUtils.createButton(removeSelected);
+
+		var btnMore = GuiTools.createMoreButton(createClassesMenu(), Side.RIGHT);
+		btnMore.setText(null);
+		btnMore.setGraphic(IconFactory.createNode(FontAwesome.Glyph.CARET_RIGHT, 12));
+
+		var spacer = new Pane();
+		spacer.setPrefWidth(4.0);
+
+		return new HBox(btnAdd, btnRemove, btnMore);
 	}
 
 	
-	private Predicate<PathClass> createPathClassListFilter(String filterText) {
-		if (filterText == null || filterText.isBlank())
-			return p -> true;
-		String text2 = filterText.toLowerCase();
-		return (PathClass p) -> {
-			return p == null || p == PathClass.NULL_CLASS ||
-					p.toString().toLowerCase().contains(text2);
-		};
-	}
-	
 	private Pane createClassPane() {
 		listClasses = new ListView<>();
-		
-		var filteredList = availablePathClasses.filtered(createPathClassListFilter(null));
+
+		var filteredList = availablePathClasses.filtered(p -> true);
 		listClasses.setItems(filteredList);
-		listClasses.setTooltip(new Tooltip("Available classifications (right-click to add or remove).\n" +
-				"Names ending with an Asterisk* are 'ignored' under certain circumstances - see the docs for more info."));
-		
-		listClasses.getSelectionModel().selectedItemProperty().addListener((v, o, n) -> updateAutoSetPathClassProperty());
+
+		listClasses.getSelectionModel().selectedItemProperty()
+				.addListener((v, o, n) -> updateAutoSetPathClassProperty());
 		
 		listClasses.setCellFactory(v -> new PathClassListCell(qupath));
 
@@ -146,15 +193,15 @@ class PathClassPane {
 			}
 		});
 
-		ContextMenu menuClasses = createClassesMenu();
-		listClasses.setContextMenu(menuClasses);
+		ContextMenu popup = createSelectedMenu();
+		listClasses.setContextMenu(popup);
 		
 		// Add the class list
 		BorderPane paneClasses = new BorderPane();
 		paneClasses.setCenter(listClasses);
 
 		Action setSelectedObjectClassAction = new Action("Set selected", e -> promptToSetClass());
-		setSelectedObjectClassAction.setLongText("Set the class of the currently-selected annotation(s)");
+		setSelectedObjectClassAction.setLongText("Set the class of the currently-selected objects");
 
 		Action autoClassifyAnnotationsAction = new Action("Auto set");
 		autoClassifyAnnotationsAction.setLongText("Automatically set all new annotations to the selected class");
@@ -164,25 +211,36 @@ class PathClassPane {
 
 		Button btnSetClass = ActionUtils.createButton(setSelectedObjectClassAction);
 		ToggleButton btnAutoClass = ActionUtils.createToggleButton(autoClassifyAnnotationsAction);
-		
-		// Create a button to show context menu (makes it more obvious to the user that it exists)
-		Button btnMore = GuiTools.createMoreButton(menuClasses, Side.RIGHT);
+
+		// Context menu button to work with selected objects & classifications
+		Button btnMoreObjects = GuiTools.createMoreButton(createSelectedMenu(), Side.RIGHT);
+
 		GridPane paneClassButtons = new GridPane();
-		paneClassButtons.add(btnSetClass, 0, 0);
-		paneClassButtons.add(btnAutoClass, 1, 0);
-		paneClassButtons.add(btnMore, 2, 0);
-		GridPane.setHgrow(btnSetClass, Priority.ALWAYS);
-		GridPane.setHgrow(btnAutoClass, Priority.ALWAYS);
-		
-		var tfFilter = new TextField();
-		tfFilter.setTooltip(new Tooltip("Type to filter classifications in list"));
-		tfFilter.setPromptText("Filter classifications in list");
-		filterText.bind(tfFilter.textProperty());
-		filterText.addListener((v, o, n) -> filteredList.setPredicate(createPathClassListFilter(n)));
-		var paneBottom = GridPaneUtils.createRowGrid(tfFilter, paneClassButtons);
-		
-		GridPaneUtils.setMaxWidth(Double.MAX_VALUE,
-				btnSetClass, btnAutoClass, tfFilter);
+		var col1 = new ColumnConstraints();
+		var col2 = new ColumnConstraints();
+		col1.setPercentWidth(50.0);
+		col2.setPercentWidth(50.0);
+		paneClassButtons.getColumnConstraints().setAll(col1, col2);
+
+		var paneMore = new VBox(btnMoreObjects);
+
+		paneClassButtons.add(btnSetClass, 0, 1);
+		paneClassButtons.add(btnAutoClass, 1, 1);
+
+		var filter = new PredicateTextField<PathClass>();
+		filter.setPromptText("Filter classes");
+		filter.setIgnoreCase(true);
+		filter.setUseRegex(true);
+		Tooltip.install(filter, new Tooltip("Type to filter classes in list"));
+
+		filteredList.predicateProperty().bind(filter.predicateProperty());
+
+		var paneBottom = new BorderPane(paneClassButtons);
+		paneBottom.setTop(filter);
+		paneBottom.setRight(paneMore);
+
+		GridPaneUtils.setHGrowPriority(Priority.ALWAYS, btnSetClass, btnAutoClass);
+		GridPaneUtils.setMaxWidth(Double.MAX_VALUE, btnSetClass, btnAutoClass, filter);
 		
 		paneClasses.setBottom(paneBottom);
 		return paneClasses;
@@ -239,7 +297,8 @@ class PathClassPane {
 		} else if (copyCombo.match(e)) {
 			// Copy the list if needed
 			String s = listClasses.getSelectionModel().getSelectedItems()
-					.stream().map(p -> p.toString()).collect(Collectors.joining(System.lineSeparator()));
+					.stream().map(PathClass::toString)
+					.collect(Collectors.joining(System.lineSeparator()));
 			if (!s.isBlank()) {
 				Clipboard.getSystemClipboard().setContent(
 						Map.of(DataFormat.PLAIN_TEXT, s));
@@ -253,15 +312,7 @@ class PathClassPane {
 		}
 	}
 	
-	
-	private Action createAddClassAction() {
-		return new Action("Add class", e -> promptToAddClass());
-	}
 
-	private Action createRemoveSelectedClassesAction() {
-		return new Action("Remove class", e -> promptToRemoveSelectedClasses());
-	}
-	
 	private Action createResetToDefaultClassesAction() {
 		return new Action("Reset to default classes", e -> promptToResetClasses());
 	}
@@ -272,10 +323,10 @@ class PathClassPane {
 	
 	private BooleanBinding createRemoveClassDisabledBinding() {
 		return Bindings.createBooleanBinding(() -> {
-			PathClass item = listClasses.getSelectionModel().getSelectedItem();
-			return item == null || PathClass.NULL_CLASS == item;
-		},
-		listClasses.getSelectionModel().selectedItemProperty()
+					PathClass item = listClasses.getSelectionModel().getSelectedItem();
+					return item == null || PathClass.NULL_CLASS == item;
+				},
+				listClasses.getSelectionModel().selectedItemProperty()
 		);
 	}
 
@@ -283,15 +334,9 @@ class PathClassPane {
 	private ContextMenu createClassesMenu() {
 		ContextMenu menu = new ContextMenu();
 		
-		Action actionAddClass = createAddClassAction();
-		Action actionRemoveClass = createRemoveSelectedClassesAction();
 		Action actionResetClasses = createResetToDefaultClassesAction();
 		Action actionImportClasses = createImportClassesFromProjectAction();
 
-		actionRemoveClass.disabledProperty().bind(createRemoveClassDisabledBinding());
-		
-		MenuItem miRemoveClass = ActionUtils.createMenuItem(actionRemoveClass);
-		MenuItem miAddClass = ActionUtils.createMenuItem(actionAddClass);
 		MenuItem miResetAllClasses = ActionUtils.createMenuItem(actionResetClasses);
 
 		MenuItem miPopulateFromImage = new MenuItem("All classes (including sub-classes)");
@@ -305,26 +350,6 @@ class PathClassPane {
 		Menu menuPopulate = new Menu("Populate from existing objects");
 		menuPopulate.getItems().addAll(
 				miPopulateFromImage, miPopulateFromImageBase);
-
-		MenuItem miSelectObjects = new MenuItem("Select objects by classification");
-		miSelectObjects.disableProperty().bind(Bindings.createBooleanBinding(
-				() -> {
-					var item = listClasses.getSelectionModel().getSelectedItem();
-					return item == null;
-				},
-				listClasses.getSelectionModel().selectedItemProperty()));
-		
-		miSelectObjects.setOnAction(e -> {
-			var imageData = qupath.getImageData();
-			if (imageData == null)
-				return;
-			Commands.selectObjectsByClassification(imageData, getSelectedPathClasses().toArray(PathClass[]::new));
-		});		
-
-		MenuItem miSetHidden = new MenuItem("Hide classes in viewer");
-		miSetHidden.setOnAction(e -> setSelectedClassesVisibility(false));
-		MenuItem miSetVisible = new MenuItem("Show classes in viewer");
-		miSetVisible.setOnAction(e -> setSelectedClassesVisibility(true));
 		
 		menu.setOnShowing(e -> {
 			var hierarchy = getHierarchy();
@@ -332,33 +357,65 @@ class PathClassPane {
 			miPopulateFromImage.setDisable(hierarchy == null);
 			miPopulateFromImageBase.setDisable(hierarchy == null);
 			miPopulateFromChannels.setDisable(qupath.getImageData() == null);
-			var selected = getSelectedPathClasses();
-			boolean hasClasses = !selected.isEmpty();
-			miSetVisible.setDisable(!hasClasses);
-			miSetHidden.setDisable(!hasClasses);
 		});
 		
 		MenuItem miImportFromProject = ActionUtils.createMenuItem(actionImportClasses);
 		
 		menu.getItems().addAll(
-				MenuTools.createMenu("Add/Remove...", 
-						miAddClass,
-						miRemoveClass
-						),
 				menuPopulate,
 				miPopulateFromChannels,
 				miResetAllClasses,
-				miImportFromProject,
-				new SeparatorMenuItem(),
-				MenuTools.createMenu("Show/Hide...", 
-						miSetVisible,
-						miSetHidden
-						),
-				miSelectObjects);
+				miImportFromProject
+		);
 		
 		return menu;
 	}
-	
+
+
+	private ContextMenu createSelectedMenu() {
+		ContextMenu menu = new ContextMenu();
+
+		MenuItem miSetHidden = new MenuItem("Hide objects with selected classes");
+		miSetHidden.setOnAction(e -> setSelectedClassesVisibility(false));
+		MenuItem miSetVisible = new MenuItem("Show objects with selected classes");
+		miSetVisible.setOnAction(e -> setSelectedClassesVisibility(true));
+
+		CheckMenuItem miShowHideExact = new CheckMenuItem("Only hide if object class matches exactly");
+		miShowHideExact.selectedProperty().bindBidirectional(qupath.getOverlayOptions().hideExactClassesOnlyProperty());
+
+		MenuItem miSelectObjects = new MenuItem("Select objects by classification");
+		miSelectObjects.disableProperty().bind(Bindings.createBooleanBinding(
+				() -> {
+					var item = listClasses.getSelectionModel().getSelectedItem();
+					return item == null && getHierarchy() != null;
+				},
+				listClasses.getSelectionModel().selectedItemProperty(),
+				qupath.imageDataProperty()));
+
+		miSelectObjects.setOnAction(e -> {
+			var imageData = qupath.getImageData();
+			if (imageData == null)
+				return;
+			Commands.selectObjectsByClassification(imageData, getSelectedPathClasses().toArray(PathClass[]::new));
+		});
+
+		menu.setOnShowing(e -> {
+			var selected = getSelectedPathClasses();
+			boolean hasClasses = !selected.isEmpty();
+			miSetVisible.setDisable(!hasClasses);
+			miSetHidden.setDisable(!hasClasses);
+		});
+
+		menu.getItems().addAll(
+				miSetVisible,
+				miSetHidden,
+				miShowHideExact,
+				new SeparatorMenuItem(),
+				miSelectObjects);
+
+		return menu;
+	}
+
 	
 	
 	/**
@@ -366,7 +423,7 @@ class PathClassPane {
 	 */
 	public void refresh() {
 		if (!Platform.isFxApplicationThread()) {
-			Platform.runLater(() -> refresh());
+			Platform.runLater(this::refresh);
 			return;
 		}
 		listClasses.refresh();
@@ -379,7 +436,7 @@ class PathClassPane {
 	private void toggleSelectedClassesVisibility() {
 		OverlayOptions overlayOptions = getOverlayOptions();
 		for (var pathClass : getSelectedPathClasses()) {
-			overlayOptions.setPathClassHidden(pathClass, !overlayOptions.isPathClassHidden(pathClass));
+			overlayOptions.setPathClassHidden(pathClass, !overlayOptions.hiddenClassesProperty().contains(pathClass));
 		}
 		listClasses.refresh();
 	}
@@ -444,7 +501,7 @@ class PathClassPane {
 			newClasses.removeAll(availablePathClasses);
 			return availablePathClasses.addAll(newClasses);
 		} else if (btn == ButtonType.NO) {
-			newClasses.add(0, PathClass.NULL_CLASS);
+			newClasses.addFirst(PathClass.NULL_CLASS);
 			return availablePathClasses.setAll(newClasses);
 		} else
 			return false;
@@ -460,17 +517,17 @@ class PathClassPane {
 		var hierarchy = getHierarchy();
 		if (hierarchy == null)
 			return false;
-		
-		Set<PathClass> representedClasses = hierarchy.getFlattenedObjectList(null).stream()
+
+		List<PathClass> newClasses = hierarchy.getFlattenedObjectList(null)
+				.stream()
 				.filter(p -> !p.isRootObject())
-				.map(p -> p.getPathClass())
+				.map(PathObject::getPathClass)
 				.filter(p -> p != null && p != PathClass.NULL_CLASS)
 				.map(p -> baseClassesOnly ? p.getBaseClass() : p)
-				.collect(Collectors.toSet());
-		
-		List<PathClass> newClasses = new ArrayList<>(representedClasses);
-		Collections.sort(newClasses);
-		
+				.distinct()
+				.sorted()
+				.collect(Collectors.toCollection(ArrayList::new));
+
 		if (newClasses.isEmpty()) {
 			Dialogs.showErrorMessage("Set available classes", "No classifications found in current image!");
 			return false;
@@ -492,7 +549,7 @@ class PathClassPane {
 			newClasses.removeAll(availablePathClasses);
 			return availablePathClasses.addAll(newClasses);
 		} else if (btn == ButtonType.NO) {
-			newClasses.add(0, PathClass.NULL_CLASS);
+			newClasses.addFirst(PathClass.NULL_CLASS);
 			return availablePathClasses.setAll(newClasses);
 		} else
 			return false;
@@ -556,7 +613,7 @@ class PathClassPane {
 		if (availablePathClasses.contains(pathClass)) {
 			Dialogs.showErrorMessage("Add class", "Class '" + input + "' already exists!");
 			return false;
-		} else if (input.toLowerCase().equals("null")) {
+		} else if (input.equalsIgnoreCase("null")) {
 			Dialogs.showErrorMessage("Add class", "Cannot add a 'null' class, try another name!");
 			return false;
 		}
@@ -614,18 +671,26 @@ class PathClassPane {
 	private boolean promptToRemoveSelectedClasses() {
 		List<PathClass> pathClasses = getSelectedPathClasses()
 				.stream()
-				.filter(p -> p != null && p != PathClass.NULL_CLASS)
+				.filter(PathClassPane::isNotNull)
 				.toList();
 		if (pathClasses.isEmpty())
 			return false;
 		String message;
 		if (pathClasses.size() == 1)
-			message = "Remove '" + pathClasses.get(0).toString() + "' from class list?";
+			message = "Remove '" + pathClasses.getFirst().toString() + "' from class list?";
 		else
 			message = "Remove " + pathClasses.size() + " classes from list?";
 		if (Dialogs.showConfirmDialog("Remove classes", message))
 			return availablePathClasses.removeAll(pathClasses);
 		return false;
+	}
+
+	private static boolean isNotNull(PathClass pathClass) {
+		return !isNull(pathClass);
+	}
+
+	private static boolean isNull(PathClass pathClass) {
+		return pathClass == null || pathClass == PathClass.NULL_CLASS;
 	}
 	
 	
@@ -644,74 +709,172 @@ class PathClassPane {
 	private List<PathClass> getSelectedPathClasses() {
 		return listClasses.getSelectionModel().getSelectedItems()
 				.stream()
-				.map(p -> p.getName() == null ? null : p)
+				.map(p -> p.getName() == null ? null : p) // Return null for NULL_CLASS
 				.toList();
 	}
 	
 	
 	/**
-	 * Extract annotations from a hierarchy with a specific classification.
-	 * @param hierarchy
-	 * @param pathClass
-	 * @return
-	 */
-	private static List<PathObject> getAnnotationsForClass(PathObjectHierarchy hierarchy, PathClass pathClass) {
-		if (hierarchy == null)
-			return Collections.emptyList();
-		List<PathObject> annotations = new ArrayList<>();
-		for (PathObject pathObject : hierarchy.getAnnotationObjects()) {
-			if (pathClass.equals(pathObject.getPathClass()))
-				annotations.add(pathObject);
-		}
-		return annotations;
-	}
-	
-	
-	/**
-	 * A {@link ListCell} for displaying {@linkplain PathClass PathClasses}, including annotation counts 
-	 * for the classes if available.
+	 * A {@link ListCell} to display a {@link PathClass}.
 	 */
 	private static class PathClassListCell extends ListCell<PathClass> {
 		
-		private QuPathGUI qupath;
-		
+		private final QuPathGUI qupath;
+		private final OverlayOptions overlayOptions;
+
+		private final BorderPane pane = new BorderPane();
+		private final Label label = new Label();
+
+		private final int size = 10;
+		private final Rectangle rectangle = new Rectangle(size, size);
+
+		private final Node iconShowing = new StackPane(IconFactory.createNode(FontAwesome.Glyph.EYE));
+		private final Node iconHidden = new StackPane(IconFactory.createNode(FontAwesome.Glyph.EYE_SLASH));
+		private final Node iconUnavailable = new StackPane(GlyphFontRegistry.font("FontAwesome")
+				.create('\uf2a8')
+				.size(QuPathGUI.TOOLBAR_ICON_SIZE));
+
+		private static final String STYLE_HIDDEN = "-fx-font-family:arial; -fx-font-style:italic;";
+		private static final String STYLE_SHOWING = "-fx-font-family:arial; -fx-font-style:normal;";
+
 		PathClassListCell(QuPathGUI qupath) {
 			this.qupath = qupath;
+			this.overlayOptions = qupath == null ? null : qupath.getOverlayOptions();
+			label.setMaxWidth(Double.MAX_VALUE);
+			label.setMinWidth(20);
+			label.setGraphic(rectangle);
+			// Tooltip for the main label (but not the visibility part)
+			Tooltip tooltip = new Tooltip("Available classifications (right-click to add or remove).\n" +
+					"Names ending with an Asterisk* are 'ignored' under certain circumstances - see the docs for more info.");
+			label.setTooltip(tooltip);
+			label.setTextOverrun(OverrunStyle.ELLIPSIS);
+
+			var sp = new StackPane(label);
+			label.setMaxWidth(Double.MAX_VALUE);
+			sp.setPrefWidth(1.0);
+			sp.setMinHeight(0.0);
+			StackPane.setAlignment(label, Pos.CENTER_LEFT);
+			pane.setCenter(sp);
+
+			configureHiddenIcon();
+			configureShowingIcon();
+			configureUnavailableIcon();
+		}
+
+		private void configureHiddenIcon() {
+			iconHidden.styleProperty().bind(Bindings.createStringBinding(() -> {
+				return iconHidden.hoverProperty().get() ? "-fx-opacity: 0.8;" : "-fx-opacity: 0.4;";
+			}, iconHidden.hoverProperty()));
+
+			if (overlayOptions != null) {
+				Tooltip.install(iconHidden, new Tooltip("Classification hidden - click to toggle visibility"));
+				iconHidden.setOnMouseClicked(this::handleToggleVisibility);
+			}
+		}
+
+		private void configureShowingIcon() {
+			iconShowing.styleProperty().bind(Bindings.createStringBinding(() -> {
+				return iconShowing.hoverProperty().get() ? "-fx-opacity: 0.8;" : "-fx-opacity: 0.1;";
+			}, iconShowing.hoverProperty()));
+
+			if (overlayOptions != null) {
+				Tooltip.install(iconShowing, new Tooltip("Classification showing - click to toggle visibility"));
+				iconShowing.setOnMouseClicked(this::handleToggleVisibility);
+			}
+		}
+
+		private void configureUnavailableIcon() {
+			iconUnavailable.styleProperty().bind(Bindings.createStringBinding(() -> {
+				return iconUnavailable.hoverProperty().get() ? "-fx-opacity: 0.8;" : "-fx-opacity: 0.4;";
+			}, iconUnavailable.hoverProperty()));
+
+			if (overlayOptions != null) {
+				Tooltip.install(iconUnavailable,
+						new Tooltip("Derived classification is hidden because a related classification is already hidden"));
+				iconUnavailable.setOnMouseClicked(this::handleToggleVisibility);
+			}
+		}
+
+		private void handleToggleVisibility(MouseEvent e) {
+			var pathClass = getItem();
+			var options = overlayOptions;
+			if (pathClass != null && options != null) {
+				options.setPathClassHidden(pathClass, !options.hiddenClassesProperty().contains(pathClass));
+				getListView().refresh();
+			}
+		}
+
+
+		private PathObjectHierarchy getHierarchy() {
+			var imageData = qupath == null ? null : qupath.getImageData();
+			return imageData == null ? null : imageData.getHierarchy();
+		}
+
+		private boolean isHidden(PathClass pathClass) {
+			return overlayOptions != null && overlayOptions.isPathClassHidden(pathClass);
+		}
+
+		private long getAnnotationCount(PathClass pathClass) {
+			var hierarchy = getHierarchy();
+			if (hierarchy != null) {
+				try {
+					return hierarchy.getAnnotationObjects()
+							.stream()
+							.filter(p -> pathClass.equals(p.getPathClass()))
+							.count();
+				} catch (Exception e) {
+					logger.debug("Exception while counting objects for class", e);
+				}
+			}
+			return -1;
+		}
+
+		private String getText(PathClass pathClass) {
+			if (pathClass.getBaseClass() == pathClass && pathClass.getName() == null) {
+				return "None";
+			} else {
+				long n = getAnnotationCount(pathClass);
+				if (n > 0)
+					return pathClass + " (" + n + ")";
+				else
+					return pathClass.toString();
+			}
+		}
+
+		private Color getColor(PathClass pathClass) {
+			var rgb = pathClass.getColor();
+			if (rgb == null || PathClassTools.isNullClass(pathClass)) {
+				return Color.TRANSPARENT;
+			} else {
+				return ColorToolsFX.getPathClassColor(pathClass);
+			}
 		}
 
 		@Override
 		protected void updateItem(PathClass value, boolean empty) {
 			super.updateItem(value, empty);
-			QuPathViewer viewer = qupath == null ? null : qupath.getViewer();
-			PathObjectHierarchy hierarchy = viewer == null ? null : viewer.getHierarchy();
-			int size = 10;
 			if (value == null || empty) {
 				setText(null);
 				setGraphic(null);
-			} else if (value.getBaseClass() == value && value.getName() == null) {
-				setText("None");
-				setGraphic(new Rectangle(size, size, ColorToolsFX.getCachedColor(0, 0, 0, 0)));
-			} else {
-				int n = 0; 
-				if (hierarchy != null) {
-					try {
-						n = getAnnotationsForClass(hierarchy, value).size();
-					} catch (Exception e) {
-						logger.debug("Exception while counting objects for class", e);
-					}
-				}
-				if (n == 0)
-					setText(value.toString());
-				else
-					setText(value.toString() + " (" + n + ")");
-				setGraphic(new Rectangle(size, size, ColorToolsFX.getPathClassColor(value)));
+				return;
 			}
-			if (!empty && viewer != null && viewer.getOverlayOptions().isPathClassHidden(value)) {
-				setStyle("-fx-font-family:arial; -fx-font-style:italic;");		
-				setText(getText() + " (hidden)");
-			} else
-				setStyle("-fx-font-family:arial; -fx-font-style:normal;");
+			rectangle.setFill(getColor(value));
+			String text = getText(value);
+			if (isHidden(value)) {
+				label.setStyle(STYLE_HIDDEN);
+				if (value != PathClass.NULL_CLASS && !overlayOptions.hiddenClassesProperty().contains(value)) {
+					pane.setRight(iconUnavailable);
+				} else {
+					pane.setRight(iconHidden);
+				}
+			} else {
+				label.setStyle(STYLE_SHOWING);
+				pane.setRight(iconShowing);
+			}
+			label.setText(text);
+			setGraphic(pane);
 		}
+
 	}
 	
 }
